@@ -20,6 +20,8 @@ Other features
 Bug fixes
 ~~~~~~~~~
 
+ * Query objects returned from ``PageQuerySet.type_q`` can now be merged with ``|`` (Brady Moe)
+
 
 Upgrade considerations
 ======================
